--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
-<div id="tv">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tech Demo</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div id="tv">
     <video id="video" src="video.mp4" muted loop onclick="this.play();"></video>
     <video id="reflexo" src="video.mp4" muted loop></video>
     <div class="filter"></div>
   </div>
+  <script src="script.js"></script>
+</body>
+</html>
