--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="tv">
-    <video id="video" src="video.mp4" muted loop onclick="this.play();"></video>
+    <video id="video" src="video.mp4" onloadstart="this.volume=0.1" loop onclick="this.play();"></video>
     <video id="reflexo" src="video.mp4" muted loop></video>
     <div class="filter"></div>
   </div>
