--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div id="tv">
-    <video id="video" src="video.mp4" onloadstart="this.volume=0.1" loop onclick="this.play();"></video>
-    <video id="reflexo" src="video.mp4" muted loop></video>
+    <video id="video" src="video.mp4" preload="auto" onloadstart="this.volume=0.1" playsinline loop onclick="this.play();"></video>
+    <video id="reflexo" src="video.mp4" preload="auto" muted playsinline loop></video>
     <div class="filter"></div>
   </div>
   <script src="script.js"></script>
