adiciona ruido branco

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <div class="filter"></div>
   </div>
   <script src="script.js"></script>
+  <audio src="whitenoise.mp3" style="display: none;" id="whiteNoise" onloadstart="this.volume=0.003"></audio>
 </body>
 </html>
